--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,12 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+.container {
+  padding: 0% !important;
+}
+a:hover {
+  color: #fff;
+}
+h1 {
+  font-size: 48px;
+}
