--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -11,7 +11,7 @@
   position: relative;
   overflow: hidden;
   /* background-image: linear-gradient(#2b3137, whitesmoke); */
-  /* background-color: #fff; */
+  background-color: #2b3137;
 }
 
 .getStartedBtn {
@@ -43,7 +43,7 @@
 
 .featureImage {
   /* height: 300px; */
-  width: 75%;
+  width: 100%;
 }
 
 .featureText {
@@ -67,8 +67,8 @@
 }
 
 .heroProjectTagline {
-  /* color: #000; */
-  font-size: 48px;
+  color: #fff;
+  font-size: 60px;
   margin: 0;
 }
 
@@ -152,7 +152,6 @@
   margin-left: 1rem;
   border-radius: 4px;
   margin: 1rem;
-  font-weight: 600;
 }
 .tryBtn {
   padding: 1rem 4rem;
@@ -161,22 +160,10 @@
   width: 260px;
   border-radius: 4px;
   margin: 1rem;
-  font-weight: 600;
 }
 .btnList {
   list-style: none;
   display: flex;
   margin-top: 2rem;
   margin-left: -2rem;
-}
-.check {
-  padding: 4px;
-  color: var(--ifm-color-primary);
-  margin-top: -7px;
-}
-h6 {
-  font-weight: 500;
-}
-.flex {
-  display: flex;
 }
